syntax = "proto3";

package dictionary;

option go_package = "github.com/valpere/trytrago/interface/api/grpc/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service DictionaryService {
  // Entry operations
  rpc CreateEntry(CreateEntryRequest) returns (EntryResponse);
  rpc GetEntry(GetEntryRequest) returns (EntryResponse);
  rpc UpdateEntry(UpdateEntryRequest) returns (EntryResponse);
  rpc DeleteEntry(DeleteEntryRequest) returns (google.protobuf.Empty);
  rpc ListEntries(ListEntriesRequest) returns (ListEntriesResponse);

  // Meaning operations
  rpc AddMeaning(AddMeaningRequest) returns (MeaningResponse);
  rpc UpdateMeaning(UpdateMeaningRequest) returns (MeaningResponse);
  rpc DeleteMeaning(DeleteMeaningRequest) returns (google.protobuf.Empty);
  rpc ListMeanings(ListMeaningsRequest) returns (ListMeaningsResponse);

  // Translation operations
  rpc CreateTranslation(CreateTranslationRequest) returns (TranslationResponse);
  rpc UpdateTranslation(UpdateTranslationRequest) returns (TranslationResponse);
  rpc DeleteTranslation(DeleteTranslationRequest) returns (google.protobuf.Empty);
  rpc ListTranslations(ListTranslationsRequest) returns (ListTranslationsResponse);

  // Social operations
  rpc AddComment(AddCommentRequest) returns (CommentResponse);
  rpc ToggleLike(ToggleLikeRequest) returns (google.protobuf.Empty);
}

service UserService {
  // User operations
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  
  // Authentication
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);

  // User content operations
  rpc ListUserEntries(ListUserEntriesRequest) returns (ListEntriesResponse);
  rpc ListUserTranslations(ListUserTranslationsRequest) returns (ListTranslationsResponse);
  rpc ListUserComments(ListUserCommentsRequest) returns (ListCommentsResponse);
  rpc ListUserLikes(ListUserLikesRequest) returns (ListLikesResponse);
}

// Entry related messages
message CreateEntryRequest {
  string word = 1;
  string type = 2;
  string pronunciation = 3;
}

message GetEntryRequest {
  string id = 1;
}

message UpdateEntryRequest {
  string id = 1;
  string word = 2;
  string type = 3;
  string pronunciation = 4;
}

message DeleteEntryRequest {
  string id = 1;
}

message ListEntriesRequest {
  int32 limit = 1;
  int32 offset = 2;
  string sort_by = 3;
  bool sort_desc = 4;
  string word_filter = 5;
  string type = 6;
}

message EntryResponse {
  string id = 1;
  string word = 2;
  string type = 3;
  string pronunciation = 4;
  repeated MeaningResponse meanings = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message ListEntriesResponse {
  repeated EntryResponse entries = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

// Meaning related messages
message AddMeaningRequest {
  string entry_id = 1;
  string part_of_speech_id = 2;
  string description = 3;
  repeated string examples = 4;
}

message UpdateMeaningRequest {
  string id = 1;
  string part_of_speech_id = 2;
  string description = 3;
  repeated string examples = 4;
}

message DeleteMeaningRequest {
  string id = 1;
}

message ListMeaningsRequest {
  string entry_id = 1;
}

message MeaningResponse {
  string id = 1;
  string entry_id = 2;
  string part_of_speech = 3;
  string description = 4;
  repeated ExampleResponse examples = 5;
  repeated TranslationResponse translations = 6;
  repeated CommentResponse comments = 7;
  int32 likes_count = 8;
  bool current_user_liked = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message ListMeaningsResponse {
  repeated MeaningResponse meanings = 1;
  int32 total = 2;
}

message ExampleResponse {
  string id = 1;
  string text = 2;
  string context = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Translation related messages
message CreateTranslationRequest {
  string meaning_id = 1;
  string language_id = 2;
  string text = 3;
}

message UpdateTranslationRequest {
  string id = 1;
  string text = 2;
}

message DeleteTranslationRequest {
  string id = 1;
}

message ListTranslationsRequest {
  string meaning_id = 1;
  string language_id = 2;
}

message TranslationResponse {
  string id = 1;
  string meaning_id = 2;
  string language_id = 3;
  string text = 4;
  repeated CommentResponse comments = 5;
  int32 likes_count = 6;
  bool current_user_liked = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ListTranslationsResponse {
  repeated TranslationResponse translations = 1;
  int32 total = 2;
}

// Social interaction messages
message AddCommentRequest {
  string target_id = 1;
  string target_type = 2; // "meaning" or "translation"
  string content = 3;
}

message ToggleLikeRequest {
  string target_id = 1;
  string target_type = 2; // "meaning" or "translation"
}

message CommentResponse {
  string id = 1;
  string content = 2;
  UserSummary user = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// User related messages
message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string avatar = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UserSummary {
  string id = 1;
  string username = 2;
  string avatar = 3;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  UserResponse user = 4;
}

// New user content listing messages
message ListUserEntriesRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string sort_by = 4;
  bool sort_desc = 5;
  string word_filter = 6;
  string type = 7;
}

message ListUserTranslationsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string sort_by = 4;
  bool sort_desc = 5;
  string language_id = 6;
  string text_search = 7;
}

message ListUserCommentsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string sort_by = 4;
  bool sort_desc = 5;
  string target_type = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
}

message ListUserLikesRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string sort_by = 4;
  bool sort_desc = 5;
  string target_type = 6;
  google.protobuf.Timestamp from_date = 7;
  google.protobuf.Timestamp to_date = 8;
}

message ListCommentsResponse {
  repeated CommentResponse comments = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message LikeResponse {
  string id = 1;
  string user_id = 2;
  string target_type = 3;
  string target_id = 4;
  UserSummary user = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ListLikesResponse {
  repeated LikeResponse likes = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}
